--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
 	<body>
 <section>
 	<h2>I love Emely</h2>
-	<p><em>I love</em> emely a whole bunch mwah i love her i love her i love her</p>
-	<p><i>I love emely</i> a whole bunch mwah i love her i love her i love her</p>
-	<p><b>I love emely</b> a whole bunch mwah i love her i love her i love her</p>
-	<p><strong>I love emely</strong> a whole bunch mwah i love her i love her i love her</p>
-	<p><u>I love emely</u> a whole bunch mwah i love her i love her i love her</p>
+	<p><em>I love</em> Emely a whole bunch mwah i love her i love her i love her</p>
+	<p><i>I love Emely</i> a whole bunch mwah i love her i love her i love her</p>
+	<p><b>I love Emely</b> a whole bunch mwah i love her i love her i love her</p>
+	<p><strong>I love Emely</strong> a whole bunch mwah i love her i love her i love her</p>
+	<p><u>I love Emely</u> a whole bunch mwah i love her i love her i love her</p>
 </section>
 
-http://www.luistries:80/index.html/index.html
-<a href="index.html">Send to Emely</a>
 <p><a href="emely2.html">What I like about Emely Serrano BBG</a></p>
 
 <p><img src="bubududu.jpg" width="300" hight="300"></p>
