--- a/index.html
+++ b/index.html
@@ -17,4 +17,14 @@
 
 <p><img src="bubududu.jpg" width="300" hight="300"></p>
 	</body>
+
+<p><a href="photoalbum.html"> Photo Album of pictures of us ❤</a></p>
+
+
+
+
+
+
+
+
 </html>
